# rag-dnd-rules-lawyer

./: .env.example  .gitattributes  .gitignore  GLOSSARY.md  Makefile  README.md  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql
scripts/: diagnose_corpus.py  fetch_corpus.py  ingest.py  verify_corpus.py
src/ruleslawyer/generation/: llm.py
src/ruleslawyer/ingest/: chunk.py  embed.py  load.py  parse.py  types.py
src/ruleslawyer/retrieval/: search.py
tests/: test_verify_corpus.py
tests/ingest/: test_chunk.py  test_embed.py  test_parse.py
